Se corrigieron las rutas de las imagenes de portafolio y donaciones

--- a/donation.html
+++ b/donation.html
@@ -92,7 +92,7 @@
 
           <div class="donation__container__row__icons">
 
-              <img src="/assets/Donation/Nequi-Logo-Download-Vector.png"        class="donation__container__row__icon-img" alt="Icon donation">
+              <img src="./assets/Donation/Nequi-Logo-Download-Vector.png"        class="donation__container__row__icon-img" alt="Icon donation">
 
               <div class="donation__container__row__icon__title">
                 <h3 class="donation__container__row__icon__title-text">3225237465<br>&<br>3152387502</h3>
