--- a/portfolio.html
+++ b/portfolio.html
@@ -90,60 +90,60 @@
           <div class="row-1">
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-1.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-1.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-2.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-2.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-3.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-3.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
           </div>
 
           <div class="row-2">
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-4.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-4.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-5.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-5.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-6.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-6.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
           </div>
 
           <div class="row-3">
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-7.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-7.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-8.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-8.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-9.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-9.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
           </div>
 
           <div class="row-4">
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-10.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-10.jpeg" class="portfolio__container__row__images__container-img"  alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-11.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-11.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
 
             <div class="portfolio__container__row__images__container">
-              <img src="/assets/Portfolio/Portfolio-12.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
+              <img src="./assets/Portfolio/Portfolio-12.jpeg" class="portfolio__container__row__images__container-img" alt="Imagen portafolio">
             </div>
           </div>
 
