--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a>
         </div>
 
-        <a href="#donation"><input type="button" value="DONAR AHORA" class="btn__donate"></a>
+        <a href="donation.html#donation"><input type="button" value="DONAR AHORA" class="btn__donate"></a>
       </div>
 
     </div>
@@ -46,14 +46,14 @@
         </div>
         <div class="nav__container__row__list">
           <ul class="nav__container__row__list__ul">
-            <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="#" class="nav__container__row__list__li__title nav__container__row__list__li__title--active">Inicio</a>
+            <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="index.html" class="nav__container__row__list__li__title">Inicio</a>
             </li>
 
-            <li class="nav__container__row__list__li"><a href="#about-us" class="nav__container__row__list__li__title">Sobre nosotros
+            <li class="nav__container__row__list__li"><a href="index.html#about-us" class="nav__container__row__list__li__title">Sobre nosotros
             </a></li>
 
             <li class="nav__container__row__list__li nav__container__row__list__li--modifier">
-              <a href="#services" class="nav__container__row__list__li__title">Servicios
+              <a href="index.html#services" class="nav__container__row__list__li__title">Servicios
               <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a>
               <ul class="nav__container__row__list__li__ul">
                 <div class="nav__container__row__list__li__ul-row">
@@ -84,7 +84,7 @@
               </ul>
             </li>
 
-            <li class="nav__container__row__list__li"><a href="portfolio.html" class="nav__container__row__list__li__title">Portafolio
+            <li class="nav__container__row__list__li"><a href="portfolio.html" class="nav__container__row__list__li__title nav__container__row__list__li__title--active">Portafolio
                 </a></li>
                 
             <li class="nav__container__row__list__li"><a href="donation.html" class="nav__container__row__list__li__title">Donaciones</a></li>
