Se corrigieron detalles en el nav de la seccion de donaciones

--- a/donation.html
+++ b/donation.html
@@ -46,10 +46,10 @@
         </div>
         <div class="nav__container__row__list">
           <ul class="nav__container__row__list__ul">
-            <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="#" class="nav__container__row__list__li__title">Inicio</a>
+            <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="index.html" class="nav__container__row__list__li__title">Inicio</a>
             </li>
 
-            <li class="nav__container__row__list__li"><a href="#about-us" class="nav__container__row__list__li__title">Sobre nosotros
+            <li class="nav__container__row__list__li"><a href="index.html#about-us" class="nav__container__row__list__li__title">Sobre nosotros
             </a></li>
 
             <li class="nav__container__row__list__li nav__container__row__list__li--modifier">
