Se hizo optimizacion de las imagenes del portafolio

--- a/donation.html
+++ b/donation.html
@@ -272,8 +272,8 @@
 </section>
 
 <!-- scroll btn -->
-<button class="scroll-top-btn hidden">&#11014;</button>
-<script src="DOM-JS/dom.js" type="module"></script>
+<!-- <button class="scroll-top-btn hidden">&#11014;</button> -->
+<!-- <script src="DOM-JS/dom.js" type="module"></script> -->
 <!-- Creator Ruben Jaramillo Cervantes -->
 
 </html>
