Se optimizo mas las imagenes

--- a/index.html
+++ b/index.html
@@ -471,30 +471,38 @@
         </div>
       </div>
   
-      <div class="footer__container__upcoming-events__list">
-        <div class="footer__container__upcoming-events__list__post">
-          <div class="container__upcoming-events__list__post__imgs">
-            <a href="" class="container__upcoming-events__list__post-link">
-              <img src="assets/Events/programas-sociales.jpeg" class="container__upcoming-events__list__post__img">
-            </a>
-          </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Atencion psicosocial</h5></a>
-
-          <div class="container__upcoming-events__list__post__info">
-            <i class="fa-solid fa-calendar"></i>
-            02 May, 2022
+      <div class="footer__container__upcoming-events">
+        <div class="footer__container__upcoming-events__column">
+          <div class="footer__container__upcoming-events__title">
+            <h4 class="footer__container__upcoming-events__text">Proximos eventos</h4>
           </div>
-        </div>
-        
-        <div class="footer__container__upcoming-events__list__post">
-          <div class="container__upcoming-events__list__post__imgs">
-            <a href="" class="container__upcoming-events__list__post-link">
-              <img src="assets/Events/programas-sociales-3.jpeg" class="container__upcoming-events__list__post__img">
-            </a>
-          </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Diagnóstico inicial en entidades que presten servicios de salud.</h5></a>
-
-          <div class="container__upcoming-events__list__post__info">
-            <i class="fa-solid fa-calendar"></i>
-            15 May, 2022
+  
+          <div class="footer__container__upcoming-events__list">
+            <div class="footer__container__upcoming-events__list__post">
+              <div class="container__upcoming-events__list__post__imgs">
+                <a href="" class="container__upcoming-events__list__post-link">
+                  <img src="assets/gallery/programas-sociales.jpeg" class="container__upcoming-events__list__post__img">
+                </a>
+              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Atencion psicosocial</h5></a>
+  
+              <div class="container__upcoming-events__list__post__info">
+                <i class="fa-solid fa-calendar"></i>
+                02 May, 2022
+              </div>
+            </div>
+            
+            <div class="footer__container__upcoming-events__list__post">
+              <div class="container__upcoming-events__list__post__imgs">
+                <a href="" class="container__upcoming-events__list__post-link">
+                  <img src="assets/gallery/programas-sociales-3.jpeg" class="container__upcoming-events__list__post__img">
+                </a>
+              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Diagnóstico inicial en entidades que presten servicios de salud.</h5></a>
+  
+              <div class="container__upcoming-events__list__post__info">
+                <i class="fa-solid fa-calendar"></i>
+                15 May, 2022
+              </div>
+            </div>
           </div>
         </div>
       </div>
