Se le agrego ancho y alto explicito a las imagenes del footer para optimizar

--- a/donation.html
+++ b/donation.html
@@ -193,7 +193,7 @@
             <div class="footer__container__upcoming-events__list__post">
               <div class="container__upcoming-events__list__post__imgs">
                 <a href="" class="container__upcoming-events__list__post-link">
-                  <img src="assets/gallery/programas-sociales.jpeg" class="container__upcoming-events__list__post__img">
+                  <img src="assets/gallery/programas-sociales.jpeg" width="70px" height="70px" class="container__upcoming-events__list__post__img">
                 </a>
               </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Atencion psicosocial</h5></a>
   
@@ -206,7 +206,7 @@
             <div class="footer__container__upcoming-events__list__post">
               <div class="container__upcoming-events__list__post__imgs">
                 <a href="" class="container__upcoming-events__list__post-link">
-                  <img src="assets/gallery/programas-sociales-3.jpeg" class="container__upcoming-events__list__post__img">
+                  <img src="assets/gallery/programas-sociales-3.jpeg" width="70px" height="70px" class="container__upcoming-events__list__post__img">
                 </a>
               </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Diagnóstico inicial en entidades que presten servicios de salud.</h5></a>
   
